<resources>
    <string name="app_name">TODO</string>
    <string name="enter_task">Enter quick task</string>
    <string name="learn_android">I will learn android today</string>
    <string name="education">Education</string>
    <string name="task_date">22-05-2016 11:30 PM</string>
    <string name="add_new_task">Add task</string>
    <string name="add_task_description">Add task description</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="select_task_category">Select task category</string>
    <string name="category">Category</string>
    <string name="view_task_in_calendar">View task in calendar</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due time</string>
    <string name="add_new_menu_task">Add new task</string>
    <string name="set_alarm">Set alarm (optional)</string>
    <string name="reminder">Set a reminder alarm for this task</string>
    <string name="add_name_of_task_to_do">Add name of task to do</string>
    <string name="test">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, </string>
    <string name="task_due_date">Task due date</string>
    <string name="reminder_alarm_is_off">Reminder alarm is not set</string>
    <string name="delete_menu_task">delete_menu_task</string>
    <string name="edit_menu_task">Edit menu task</string>
    <string name="no_time">Due date not set</string>
    <string name="task_date_and_time">Task date and time must be add</string>
    <string name="invalid_input_values">Some input fields must be filled</string>
    <string-array name="select_task_category">
        <item>Education</item>
        <item>Event</item>
        <item>Shopping</item>
        <item>Church</item>
        <item>Hospital</item>
        <item>Meeting</item>
        <item>Work</item>
    </string-array>
</resources>
