<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:scrollbars="none">
<LinearLayout
    android:id="@+id/add_task_layer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    tools:context="com.inducesmile.androidrealmexample.AddTaskActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/add_name_of_task_to_do"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/add_task_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:inputType="text"

        android:maxLines="1"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/_12sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/add_task_description"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/add_task_description2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="top|left"
        android:padding="@dimen/_8sdp"

        android:lines="6"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/select_task_category"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp">
        <Spinner
            android:id="@+id/select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/_8sdp">
        </Spinner>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/due_date"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_task_ending"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="text"
            android:maxLines="1"

            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/add_task_date"
            android:layout_width="61dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="onClick"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/_20sdp"
            android:src="@drawable/addcalender" />

        <ImageView
            android:id="@+id/delete_task_date"
            android:layout_width="19dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cross" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/due_time"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/add_task_ending_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="@dimen/_12sdp"
            android:inputType="text"

            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/_12sdp"/>

        <ImageView
            android:id="@+id/add_task_time"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/_20sdp"
            android:onClick="onClick"
            android:src="@drawable/timer" />

        <ImageView
            android:id="@+id/delete_task_time"
            android:layout_width="10dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClick"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cross" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/set_alarm"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>
    <CheckBox
        android:id="@+id/set_task_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/reminder"
        android:layout_marginBottom="@dimen/_16sdp"/>
</LinearLayout>
</ScrollView>